<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dashIO</string>

    <string name="DO0_description">DIGITAL OUTPUT #0</string>
    <string name="DO1_description">DIGITAL OUTPUT #1</string>
    <string name="DO2_description">DIGITAL OUTPUT #2</string>
    <string name="DO3_description">DIGITAL OUTPUT #3</string>
    <string name="DO4_description">DIGITAL OUTPUT #4</string>
    <string name="DO5_description">DIGITAL OUTPUT #5</string>

    <string name="DI0_description">DIGITAL INPUT #0</string>
    <string name="DI1_description">DIGITAL INPUT #1</string>
    <string name="DI2_description">DIGITAL INPUT #2</string>
    <string name="DI3_description">DIGITAL INPUT #3</string>
    <string name="DI4_description">DIGITAL INPUT #4</string>
    <string name="DI5_description">DIGITAL INPUT #5</string>

    <string name="action_settings">Settings</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_device_settings_title">Device Settings</string>
    <string name="pref_select_device">Select Device</string>
    <string-array name="pref_select_device_entries">
        <item>No Devices Found</item>
    </string-array>
    <string-array name="pref_select_device_values">
        <item>NO_DEVICE</item>
    </string-array>
    <string name="pref_select_device_summary">No Device Selected</string>
    <string name="pref_select_device_default">NO_DEVICE</string>

    <string name="pref_add_device">Add Device</string>
    <string name="pref_framewidth">Horizontal Resolution</string>
    <string name="pref_frameheight">Vertical Resolution</string>
    <string name="pref_numbuffers">V4L2 Frame Buffers</string>

    <string name="pref_pixelformat">Pixel Format</string>
    <string-array name="pref_pixelformat_entries">
        <item>YUYV</item>
        <item>UYVY</item>
        <item>NV21</item>
        <item>YV12</item>
        <item>RGB565</item>
        <item>RGBA8888</item>
    </string-array>
    <string name="pref_pixelformat_default">YUYV</string>

    <string name="pref_scantype">Scan Type</string>
    <string-array name="pref_scantype_entries">
        <item>Progressive Scan</item>
        <item>Interlaced</item>
    </string-array>
    <string-array name="pref_scantype_values">
        <item>PROGRESSIVE</item>
        <item>INTERLACED</item>

    </string-array>
    <string name="pref_scantype_default">FIELD_EVEN_FIRST</string>
    <string name="pref_input">Select Input</string>


    <string name="pref_select_standard">TV Standard</string>
    <string name="pref_select_standard_default">NTSC</string>
    <string-array name="pref_select_standard_entries">
        <item>NTSC</item>
        <item>PAL</item>
    </string-array>

    <string name="pref_deinterlace_method">Deinterlace Method</string>
    <string-array name="pref_deinterlace_method_entries">
        <item>None</item>
        <item>Discard</item>
        <item>Bob</item>
        <!--<item>Blend</item>  TODO: 3/22/2016 - Renable Blend Deinterlacing after implementation -->
    </string-array>
    <string-array name="pref_deinterlace_method_values">
        <item>NONE</item>
        <item>DISCARD</item>
        <item>BOB</item>
        <!--<item>BLEND</item>  -->
    </string-array>
    <string name="pref_deinterlace_method_default">NONE</string>
    <string name="pref_deinterlace_method_summary">None</string>

    <string name="pref_manual_set_dev_loc">Manually Select Device Location</string>
    <string name="pref_manual_set_dev_loc_summ">Enable if device location is not auto detected</string>

    <string name="pref_select_dev_loc">Select Device File</string>
    <string name="pref_select_dev_loc_default">/dev/video</string>

    <string name="pref_request_usb_permission">Request USB Permission</string>
    <string name="pref_request_usb_permission_summ">Select if SELinux is enforcing</string>

    <string name="pref_layout_settings_title">Layout Settings</string>
    <string name="pref_layout_fullscreen">Start in fullscreen mode</string>
    <string name="pref_layout_fullscreen_summ">Stretch image to fill the entire screen</string>
    <string name="pref_layout_immersive">Immersive mode</string>
    <string name="pref_layout_immersive_summ">Enable to hide action/navigation bars</string>
    <string name="pref_layout_toasts">Enable Toasts</string>
    <string name="pref_layout_toasts_summ">Disable to remove info popups</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_choose_standard">Choose Region Standard</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
