<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="170dp"
            android:layout_height="77dp"
            android:text="@string/DI0_description"
            android:id="@+id/DI0_indicator"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/digital_indicator"
            android:textColor="#000000"
            android:gravity="center"
            android:elevation="4dp"
            />

        <TextView
            android:layout_width="170dp"
            android:layout_height="77dp"
            android:text="@string/DI1_description"
            android:id="@+id/DI1_indicator"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/digital_indicator"
            android:textColor="#000000"
            android:gravity="center"
            android:elevation="4dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="77dp"
            android:text="@string/DI2_description"
            android:id="@+id/DI2_indicator"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/digital_indicator_on"
            android:textColor="#000000"
            android:gravity="center"
            android:elevation="4dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="77dp"
            android:text="@string/DI3_description"
            android:id="@+id/DI3_indicator"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/digital_indicator_on"
            android:textColor="#000000"
            android:gravity="center"
            android:elevation="4dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="77dp"
            android:text="@string/DI4_description"
            android:id="@+id/DI4_indicator"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/digital_indicator"
            android:textColor="#000000"
            android:gravity="center"
            android:elevation="4dp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="77dp"
            android:text="@string/DI5_description"
            android:id="@+id/DI5_indicator"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/digital_indicator_on"
            android:textColor="#000000"
            android:gravity="center"
            android:elevation="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout">

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/DO0_description"
            android:id="@+id/DO0_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/DO0_description"
            android:textOn="@string/DO0_description"
            android:textSize="18dp"
            android:background="@android:drawable/btn_default"
            android:drawableBottom="@android:drawable/button_onoff_indicator_off"/>

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/DO1_description"
            android:id="@+id/DO1_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/DO1_description"
            android:textOn="@string/DO1_description"
            android:textSize="18dp"
            android:background="@android:drawable/btn_default"
            android:drawableBottom="@android:drawable/button_onoff_indicator_off"/>

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/DO2_description"
            android:id="@+id/DO2_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/DO2_description"
            android:textOn="@string/DO2_description"
            android:textSize="18dp"
            android:background="@android:drawable/btn_default"
            android:drawableBottom="@android:drawable/button_onoff_indicator_off"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout2">

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/DO3_description"
            android:id="@+id/DO3_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/DO3_description"
            android:textOn="@string/DO3_description"
            android:textSize="18dp"
            android:background="@android:drawable/btn_default"
            android:drawableBottom="@android:drawable/button_onoff_indicator_off"/>

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/DO4_description"
            android:id="@+id/DO4_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/DO4_description"
            android:textOn="@string/DO4_description"
            android:textSize="18dp"
            android:background="@android:drawable/btn_default"
            android:drawableBottom="@android:drawable/button_onoff_indicator_off"/>

        <ToggleButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:text="@string/DO5_description"
            android:id="@+id/DO5_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/DO5_description"
            android:textOn="@string/DO5_description"
            android:textSize="18dp"
            android:background="@android:drawable/btn_default"
            android:drawableBottom="@android:drawable/button_onoff_indicator_off"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout3"
        android:layout_marginRight="10dp">

        <ImageButton
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/google_maps_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/google_maps"
            android:background="@android:drawable/btn_default"
            />
    </LinearLayout>

</RelativeLayout>
